<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EasyNote</string>

    <string name="title_note">Note</string>
    <string name="title_todo">Todo</string>
    <string name="title_new_file">New File</string>
    <string name="title_note_doc">Note</string>
    <string name="title_nav_settings">Settings</string>
    <string name="title_nav_darkmode">Night</string>
    <string name="title_nav_exit">Exit</string>
    <string name="title_menu_recently">Recently</string>
    <string name="title_menu_newnote">New note</string>
    <string name="title_menu_tags">Tags</string>
    <string name="title_menu_edit">Edit</string>
    <string name="title_menu_view_notes">View notes</string>
    <string name="title_menu_delete">Delete</string>
    <string name="title_menu_save">Save</string>
    <string name="title_menu_rename">Rename</string>
    <string name="title_messagebox_permission_denied">Permission denied</string>
    <string name="title_messagebox_select_cover">Select cover</string>
    <string name="title_messagebox_file_exists">File exists</string>
    <string name="title_messagebox_delete">Delete</string>
    <string name="text_fragment_note_template_holiday_title">Start a note!</string>
    <string name="text_fragment_note_template_holiday_subtitle">Holiday</string>
    <string name="text_fragment_note_template_summer_title">Record life!</string>
    <string name="text_fragment_note_template_summer_subtitle">Summer</string>
    <string name="text_fragment_note_mynotes_title">My notes</string>
    <string name="text_activity_createfile_theme">Theme</string>
    <string name="text_activity_createfile_describe">Describe</string>
    <string name="text_activity_createfile_cover">Cover</string>
    <string name="text_activity_createfile_chooseimg">Select</string>
    <string name="text_activity_createfile_clear">Clear</string>
    <string name="text_activity_view_mode">View Mode</string>
    <string name="text_activity_edit_mode">Edit Mode</string>
    <string name="text_activity_edit_here">Insert text here…</string>
    <string name="text_button_positive_default">OK</string>
    <string name="text_button_negative_default">Cancel</string>
    <string name="text_button_positive_allow_1">Allow</string>
    <string name="text_button_positive_allow_2">To set allow</string>
    <string name="text_button_negative_deny">Deny</string>
    <string name="text_button_positive_camera">Camera</string>
    <string name="text_button_negative_album">Album</string>
    <string name="text_button_positive_save">Save</string>
    <string name="text_button_negative_donot_save">Do not save</string>
    <string name="text_dialog_file_exists">*A file named with this theme already exists</string>
    <string name="message_exit">Are you sure you want to exit?</string>
    <string name="message_select_cover">Choose a way to select the cover</string>
    <string name="message_clear_cover">Clear the cover?</string>
    <string name="message_file_exists">The file already exists, do you need to delete the old file? Or try changing the theme</string>
    <string name="message_delete_note">Confirm to delete</string>
    <string name="message_save_note">Save notes?</string>
    <string name="message_loading_default">Loading…</string>
    <string name="message_permission_denied_storage_1">Forbidding read-write permission will cause the data to be unable to be saved normally. \nClick \"Allow\" to use it!</string>
    <string name="message_permission_denied_storage_2">Forbidding read-write permission will cause the data to be unable to be saved normally. You seem to have chosen not to ask again, you need to go to the setting to allow this permission.</string>
    <string name="message_permission_denied_camera_1">Allow camera access to shoot photo properly. \nClick \"Allow\" to use it!</string>
    <string name="message_permission_denied_camera_2">Allow camera access to shoot photo properly. You seem to have chosen not to ask again, you need to go to the setting to allow this permission.</string>
    <string name="toast_camera_not_found">The camera is not available or the device has no camera</string>
    <string name="toast_not_allowed_characters">Characters not allowed: </string>
    <string name="toast_cannot_input_more_1">Cannot enter more than</string>
    <string name="toast_cannot_input_more_2">character(s)</string>
    <string name="toast_one_more_time_back">Press again to return</string>
    <string name="toast_one_more_time_exit">Press again to exit</string>
    <string name="toast_savefile_successful">Saved successfully</string>
</resources>